--- a/README
+++ b/README
@@ -1,3 +1,55 @@
 Compile:
 
-nbc -O=master.rxe line_follower.nxc
+nbc -O=master.rxe master.nxc
+
+sub line_following(int &motor_array[])
+{
+  float error = 0;    // Error term for PID controller
+  float offset = 50;  // Offset - the amount of typical black/white ratio (should be around 50%)
+  int k_prop = 1;    // Proportional Gain
+  int light_val_right = 1;  // Value for light sensor
+  int light_val_left = 0;
+
+  int power_A = 0;
+  int power_B = 0;
+
+  // PID controller
+  light_val_left = Sensor(LEFT_LIGHT);
+  light_val_right = Sensor(RIGHT_LIGHT);
+
+  error = light_val_left - light_val_right;
+  // ERROR: Negativ -> Drej til venstre, Positiv -> Drej til højre.
+
+  error = error * k_prop;
+
+  TextOut(0,LCD_LINE5,"Error");
+  NumOut(0,LCD_LINE6, error);
+
+  if (error < 0) {
+    motor_array[0] = SPEED - error;
+    motor_array[1] = SPEED;
+  }
+  else
+  {
+    motor_array[0] = SPEED;
+    motor_array[1] = SPEED - error;
+  }
+}
+
+void actuator_driver(int &motor_array[])
+{
+  if(motor_array[0] < 0)
+  {
+    OnFwd(WHEEL_LEFT,abs(motor_array[0]));
+  } else
+  {
+    OnRev(WHEEL_LEFT,abs(motor_array[0]));
+  }
+  if(motor_array[1] < 0)
+  {
+    OnFwd(WHEEL_RIGHT,abs(motor_array[0]));
+  } else
+  {
+    OnRev(WHEEL_RIGHT,abs(motor_array[0]));
+  }
+}
